[package]
name = "api"
version = "0.1.0"
authors = ["sollimann <kristoffer.solberg@cognite.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
drivers = { path = "../drivers"}
proto = { path = "../proto"}
serialport = "4.0.0"
tonic = "0.4"
prost = "0.7"
prost-types = "0.7"
futures-core = "0.3"
futures-util = "0.3"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time"] }

async-stream = "0.2" # try bump to 0.3.0
async-std = "1.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.7"

[build-dependencies]
tonic-build = "0.4"
prost-build = "0.7"

[lib]
name = "api"
path = "src/lib.rs"

# Binary targets are executables programs that can be run after being compiled.
# The default binary filename is src/main.rs
[[bin]]
name = "server"
path = "src/servers/facade.rs"

[[bin]]
name = "client"
path = "src/clients/client.rs"