[package]
name = "autonomy"
version = "0.1.0"
authors = ["sollimann <kristoffer.solberg@cognite.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#api = { path = "../api"}
proto = { path = "../proto"}
drivers = {path = "../drivers"}
nalgebra = "0.24.1"
futures-util = "0.3.12"
serialport = "4.0.0"

# Required for wellknown types
prost-types = "0.7"
prost = "0.7"