[package]
name = "drivers"
version = "0.1.0"
authors = ["sollimann <kristoffer.solberg@cognite.com>"]
edition = "2018"

# See more keys and their definiticaons at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "4.0.0"
byteorder = "1.4.2"
hex = "0.4.2"
parse_int = "0.5.0"
rug = "1.11.0"
bitreader = "0.3.2"
colored = "2.0.0"

