[package]
name = "proto"
version = "0.1.0"
authors = ["sollimann <kristoffer.solberg@cognite.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = { version = "0.4", features = ["prost"] }
prost = "0.7"
prost-types = "0.7"

[build-dependencies]
tonic-build = "0.4"
prost-build = "0.7"